<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/buttonConfig"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginBottom="452dp"
        android:drawableLeft="@drawable/ic_baseline_build_24"
        android:text="@string/btn_Config"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.911" />

    <Button
        android:id="@+id/buttonNav"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginBottom="452dp"
        android:drawableLeft="@drawable/ic_baseline_explore_24"
        android:text="@string/btn_Navegacao"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.911" />

    <Button
        android:id="@+id/buttonHis"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginBottom="352dp"
        android:drawableLeft="@drawable/ic_baseline_restore_24"
        android:text="@string/btn_Historico"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConfig"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonGNSS"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginBottom="352dp"
        android:drawableLeft="@drawable/ic_baseline_location_on_24"
        android:text="@string/btn_Gnss"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNav"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonCredi"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginBottom="280dp"
        android:drawableLeft="@drawable/ic_baseline_people_24"
        android:text="@string/btn_Credito"

        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="69dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:text="@string/text_TituloMain"
        android:textColor="#000000"
        android:textSize="36dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="308dp"
        android:layout_height="264dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCredi"
        app:srcCompat="@drawable/inserir_um_subtitulo16" />

    <Button
        android:id="@+id/btnSatelite"

        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginBottom="280dp"
        android:text="Info"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>