<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center"
    android:orientation="vertical"

    tools:context=".TelaConfig">



    <TextView

        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textSize="36dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/text_TituloConfig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Spinner
        android:id="@+id/spinnercoordenadas"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:singleLine="true"

        android:theme="@style/Spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.133" />


    <Spinner
        android:id="@+id/spinnervelocidade"
        android:layout_width="200dp"
        android:theme="@style/Spinner"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnercoordenadas"
        app:layout_constraintVertical_bias="0.104" />

    <Spinner
        android:id="@+id/spinnerMapa"
        android:layout_width="200dp"
        android:theme="@style/Spinner"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnervelocidade"
        app:layout_constraintVertical_bias="0.129" />


    <Spinner
        android:id="@+id/spinnerTipodoMapa"
        android:layout_width="200dp"
        android:theme="@style/Spinner"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMapa"
        app:layout_constraintVertical_bias="0.16" />

    <Switch
        android:id="@+id/trafego"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSwitch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTipodoMapa"
        app:layout_constraintVertical_bias="0.159" />

    <Button
        android:id="@+id/btnvoltarConfig"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/btn_VoltarConfig"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trafego"
        app:layout_constraintVertical_bias="0.352" />


</androidx.constraintlayout.widget.ConstraintLayout>